--- a/CovidHelp/Views/Shared/_Layout.cshtml
+++ b/CovidHelp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,6 +21,7 @@
                     <ul class="nav navbar-nav">
                         <li class="nav-item"><a href="@Url.Action("index", "offer")" class="nav-link">Help offer List</a></li>
                         <li class="nav-item"><a href="@Url.Action("create", "offer")" class="nav-link">Add offer</a></li>
+                        <li class="nav-item"><a href="@Url.Action("Login", "User")" class="nav-link">SignIn</a></li>
                     </ul>
                     <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
                         <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i class="fa fa-cog fa-fw fa-lg"></i></a></li>
